# talk-pythonie-meetup-kafka

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  consumer.py  docker-compose.yml  faust_consumer.py  handlers.py  helpers.py  producer.py  pyproject.toml  records.py  services.py  settings.py
common/: services.py  settings.py
consumer_src/: app.py  topics.py  utils.py
consumer_src/agents/: email_handler.py  message_handler.py
producer_src/: handlers.py  middlewares.py  schemas.py
